[fix] nav height on mobile was bigger than it was supposed to

--- a/stylus/ui-app/layouts.styl
+++ b/stylus/ui-app/layouts.styl
@@ -65,6 +65,6 @@ $app-2panes-sticky
         flex-direction column-reverse
 
         > aside
-            flex 0 0 em(50px, 16px)
+            flex 0 0 em(47px, 16px)
             width 100%
             z-index $nav-index
